--- a/card_counter/templates/player.html
+++ b/card_counter/templates/player.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {{ player.name }} has won {{ player.won_games|length }} games
+    {{ player.name }} has played {{ player.games|length }} and won {{ player.won_games|length }} games
 {% endblock %}
