Move hard-coded style to head <style> tags

--- a/card_counter/templates/base.html
+++ b/card_counter/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Card Counter{% endblock %}</title>
+    {% block head_local %}{% endblock %}
 </head>
 <body>
     <div id="content">{% block content %}{% endblock %}</div>
