--- a/card_counter/templates/index.html
+++ b/card_counter/templates/index.html
@@ -1,9 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p>There are <a href="{{ url_for('players') }}">{{ player_count }} players</a> and <a href="{{ url_for('games') }}">{{ game_count }} games</a> registered in this database.</p>
+  <p>There are <a href="{{ url_for('players') }}">{{ player_count }} players</a> and <a href="{{ url_for('games') }}">{{ game_count }} games</a> registered in this database.</p>
 
-{% for statistic in stats %}
-{{ statistic|safe }}
-{% endfor %}
+  {% for statistic in stats %}
+  <div class="half">
+    {{ statistic|safe }}
+  </div>
+  {% endfor %}
+{% endblock %}
+
+{% block head_local %}
+  <style>
+    div.half {
+      width:50%;
+      float:left;
+    }
+  </style>
 {% endblock %}
